# vet-clinic-api

./: .dockerignore  README.md  alembic.ini  main.py  pyproject.toml  vet_clinic.db
app/config/: database.py
app/dependencies/: auth.py
app/middleware/: auth_middleware.py
app/models/: client.py  patient.py  revoked_token.py  user.py
app/routes/: auth.py  clients.py  patients.py  users.py
app/schemas/: auth.py  user.py
app/services/: auth.py
migrations/: env.py
migrations/versions/: 0552cfd4a976_fix_datetime_colum_client_and_patient.py  103a0a76f12b_initial_migration_with_client_and_.py  797b963a499c_teste_automático_de_importação.py  b2ffd4070b37_fix_revokedtoken_model.py  b34bd87897c7_initial_database_migration.py  b58ab944f4af_add_revokedtoken_table.py  ddd724a9da89_fix_primary_key_auto_increment_issue.py
