[project]
name = "vet-clinic-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.1",
    "bcrypt>=4.2.1",
    "fastapi[standard]>=0.115.8",
    "ignr>=2.2",
    "passlib[bycript]>=1.7.4",
    "pika>=1.3.2",
    "python-jose[cryptography]>=3.3.0",
    "redis>=5.2.1",
    "sqlmodel>=0.0.22",
]

[dependency-groups]
dev = [
    "ruff>=0.9.4",
]
